# rsipstack

./: Cargo.toml
src/dialog/: invitation.rs
src/transaction/: endpoint.rs
src/transport/: tls.rs  transport_layer.rs
