[package]
name = "rsipstack"
version = "0.2.93"
edition = "2021"
description = "SIP Stack Rust library for building SIP applications"
license = "MIT"
repository = "https://github.com/restsend/rsipstack"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "sipstack"]
authors = ["kui<kui@fourz.cn>"]
categories = ["network-programming", "multimedia"]


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bench_ua"
path = "src/bin/bench_ua.rs"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
rsip = { version = "0.4.0" }
thiserror = "2.0.17"
tracing = "0.1.41"
tokio-util = { version = "0.7.17", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
rand = { version = "0.9.2" }
get_if_addrs = "0.5.3"
rsip-dns = { version = "0.1.4", features = ["trust-dns"], optional = true }
bytes = "1.11.0"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
rustls = "0.23.35"
clap = { version = "4.5.53", features = ["derive"] }
nom = "8.0.0"

[features]
default = ["rustls", "websocket", "rsip-dns"]
rustls = ["tokio-rustls", "rustls-pemfile"]
websocket = ["tokio-tungstenite"]
rsip-dns = ["dep:rsip-dns"]
all-transports = ["rustls", "websocket"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47.1", features = ["time", "sync", "macros", "io-util"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
dotenv = "0.15"
sdp-rs = "0.2.1"
rtp-rs = "0.6.0"
stun-rs = "0.1.11"
axum = { version = "0.8.7", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["fs", "cors"] }
http = "1.4.0"

[[example]]
name = "client"
path = "examples/client/main.rs"

[[example]]
name = "proxy"
path = "examples/proxy.rs"
